--- a/menu_palette_du_gout.html
+++ b/menu_palette_du_gout.html
@@ -10,5 +10,23 @@
         <script src="https://kit.fontawesome.com/3f75339eca.js" crossorigin="anonymous"></script>
     </head>
     <body>
+        <header>
+            <nav><a href="index.html"><i class="fa-solid fa-arrow-left"></i></a></nav>
+            <h1>ohmyfood</h1>
+        </header>
+        <Main>
+
+        </Main>
+        <Footer>
+            <h1>ohmyfood</h1>
+            <menu>
+                <ul>
+                    <li><i class="fa-solid fa-utensils"></i>Proposer un restaurant</li>
+                    <li><i class="fa-solid fa-handshake-angle"></i>Devenir Partenaire</li>
+                    <li>Mentions légales</li>
+                    <li>Contact</li>
+                </ul>
+            </menu>
+        </Footer>
     </body>
 </html>
