--- a/index.html
+++ b/index.html
@@ -15,7 +15,36 @@
             <p><i class="fa-solid fa-location-dot"></i>Paris, Bellevile</p>
         </header>
         <Main>
-
+            <section class="search">
+                <H2>Réservez le menu qui vous convient</H2>
+                <p>Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
+                <button>Explorer nos restaurants</button>
+            </section>
+            <section class="howto">
+                <h2></h2>
+                <div>
+                    <p>1</p>
+                    <div>
+                        <p><i class="fa-solid fa-mobile-screen-button"></i></p>
+                        <h4>Choisissez un restaurant</h4>
+                    </div>
+                </div>
+                <div>
+                    <p>2</p>
+                    <div>
+                        <p><i class="fa-solid fa-list-ul"></i></p>
+                        <h4>Composez votre menu</h4>
+                    </div>
+                </div>
+                <div>
+                    <p>3</p>
+                    <div>
+                        <p><i class="fa-solid fa-store"></i></p>
+                        <h4>Dégustez au restaurant</h4>
+                    </div>
+                </div>
+            </section>
+            
         </Main>
         <Footer>
             <h1>ohmyfood</h1>
