Dossier images, card 1 et titres de pages
Intégration du dossier images
Ajout des titres de pages
Création du HTML pour la card 1 de l'index

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
     <head>
         <meta charset="utf-8">
-        <title>Le titre de ma page</title>
+        <title>Ohmyfood</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,500;1,700&family=Shrikhand&display=swap" rel="stylesheet">
@@ -44,7 +44,22 @@
                     </div>
                 </div>
             </section>
-            
+            <section class="restaurants">
+                <h2>Restaurants</h2>
+                <a href="menu_palette_du_gout.html">
+                    <div class="card_link">
+                        <div class="photo"><img src="/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Photo du restaurant La palette du goût"><button class="button_new">Nouveau</button></div>
+                        <div class="infos">
+                            <div class="info_text">
+                                <h3>La palette du goût</h3>
+                                <p>Ménilmontant</p> 
+                            </div>
+                            <button><i class="fa-regular fa-heart"></i></button>
+                            <button><i class="fa-solid fa-heart"></i></button>
+                        </div>
+                    </div>
+                </a>
+            </section>
         </Main>
         <Footer>
             <h1>ohmyfood</h1>
