--- a/restaurants/menu_palette_du_gout.html
+++ b/restaurants/menu_palette_du_gout.html
@@ -6,12 +6,12 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,500;1,700&family=Shrikhand&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="stylesheet_menu.css">
+        <link rel="stylesheet" href="/assets/stylesheet_menu.css">
         <script src="https://kit.fontawesome.com/3f75339eca.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <header>
-            <nav><a href="index.html"><i class="fa-solid fa-arrow-left"></i></a></nav>
+            <nav><a href="/index.html"><i class="fa-solid fa-arrow-left"></i></a></nav>
             <h1>ohmyfood</h1>
         </header>
         <Main>
