--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     </head>
     <body>
         <header>
-            <img src="assets/images/logo/ohmyfood@2x.svg" alt="Logo Ohmyfood">
-            <div class="localisation">
+            <img class="header-logo" src="assets/images/logo/ohmyfood@2x.svg" alt="Logo Ohmyfood">
+            <div class="header-location">
                 <i class="fa-solid fa-location-dot"></i>
                 <p>Paris, Bellevile</p>
             </div>
         </header>
-        <Main>
+        <main class="main-container">
             <section class="search">
                 <h1>Réservez le menu qui vous convient</h1>
                 <p>Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
@@ -33,14 +33,14 @@
                     </div>
                 </div>
                 <div>
-                    <p>2</p>
+                    <p class="number_box">2</p>
                     <div>
                         <p><i class="fa-solid fa-list-ul"></i></p>
                         <h4>Composez votre menu</h4>
                     </div>
                 </div>
                 <div>
-                    <p>3</p>
+                    <p class="number_box">3</p>
                     <div>
                         <p><i class="fa-solid fa-store"></i></p>
                         <h4>Dégustez au restaurant</h4>
@@ -49,8 +49,8 @@
             </section>
             <section class="restaurants">
                 <h1>Restaurants</h1>
-                <a href="restaurants/menu_palette_du_gout.html">
-                    <div class="card_link">
+                <div class="restaurant-card">
+                    <a href="restaurants/menu_palette_du_gout.html">
                         <div class="photo"><img src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Photo du restaurant La palette du goût"><button class="button_new">Nouveau</button></div>
                         <div class="infos">
                             <div class="info_text">
@@ -60,20 +60,20 @@
                             <button><i class="fa-regular fa-heart"></i></button>
                             <button><i class="fa-solid fa-heart"></i></button>
                         </div>
-                    </div>
-                </a>
+                    </a>
+                </div>
             </section>
-        </Main>
-        <Footer>
-            <img src="assets/images/logo/ohmyfood@2x.svg" alt="Logo Ohmyfood">
-            <menu>
-                <ul>
-                    <li><i class="fa-solid fa-utensils"></i>Proposer un restaurant</li>
-                    <li><i class="fa-solid fa-handshake-angle"></i>Devenir Partenaire</li>
-                    <li>Mentions légales</li>
-                    <li>Contact</li>
+        </main>
+        <footer>
+            <div class="info">
+                <img class="info-logo" src="assets/images/logo/ohmyfood@2x.svg" alt="Logo Ohmyfood">
+                <ul class="info-liens">
+                    <li><a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a></li>
+                    <li><a href="#"><i class="fa-solid fa-handshake-angle"></i>Devenir Partenaire</a></li>
+                    <li><a href="#">Mentions légales</a></li>
+                    <li><a href="#">Contact</a></li>
                 </ul>
-            </menu>
-        </Footer>
+            </div>
+        </footer>
     </body>
 </html>
