--- a/index.html
+++ b/index.html
@@ -14,32 +14,32 @@
             <img class="header-logo" src="assets/images/logo/ohmyfood@2x.svg" alt="Logo Ohmyfood">
             <div class="header-location">
                 <i class="fa-solid fa-location-dot"></i>
-                <p>Paris, Bellevile</p>
+                <input type="text" name="location" id="city" placeholder="Paris, Belleville"></input>
             </div>
         </header>
         <main class="main-container">
-            <section class="search">
+            <section class="intro section-bgd">
                 <h1>Réservez le menu qui vous convient</h1>
                 <p>Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
-                <button>Explorer nos restaurants</button>
+                <button class="button-fantasy">Explorer nos restaurants</button>
             </section>
             <section class="howto">
                 <h1>Fonctionnement</h1>
-                <div class="card_explain">
+                <div class="use-card">
                     <p class="number_box">1</p>
                     <div>
                         <p><i class="fa-solid fa-mobile-screen-button"></i></p>
                         <h4>Choisissez un restaurant</h4>
                     </div>
                 </div>
-                <div>
+                <div class="use-card">
                     <p class="number_box">2</p>
                     <div>
                         <p><i class="fa-solid fa-list-ul"></i></p>
                         <h4>Composez votre menu</h4>
                     </div>
                 </div>
-                <div>
+                <div class="use-card">
                     <p class="number_box">3</p>
                     <div>
                         <p><i class="fa-solid fa-store"></i></p>
@@ -47,7 +47,7 @@
                     </div>
                 </div>
             </section>
-            <section class="restaurants">
+            <section class="restaurants section-bgd">
                 <h1>Restaurants</h1>
                 <div class="restaurant-card">
                     <a href="restaurants/menu_palette_du_gout.html">
