--- a/index.html
+++ b/index.html
@@ -49,29 +49,31 @@
             </section>
             <section id="restaurants" class="section-bgd">
                 <h1>Restaurants</h1>
-                    <a href="restaurants/menu_palette_du_gout.html">
-                        <article class="restaurant-card">
-                            <div class="card-img">
-                                <img src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Photo du restaurant La palette du goût">
-                                <button class="button-new">Nouveau</button>
-                            </div>
-                            <div class="card-content">
-                                <div class="card-txt">
-                                    <h3>La palette du goût</h3>
-                                    <p>Ménilmontant</p> 
+                    <div class="restaurant-list">
+                        <a href="restaurants/menu_palette_du_gout.html">
+                            <article class="restaurant-card">
+                                <div class="card-img">
+                                    <img src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Photo du restaurant La palette du goût">
+                                    <button class="button-new">Nouveau</button>
                                 </div>
-                                <div class="card-rate">
-                                    <button><i class="fa-regular fa-heart"></i></button>
-                                    <button><i class="fa-solid fa-heart"></i></button>
+                                <div class="card-content">
+                                    <div class="card-txt">
+                                        <h3>La palette du goût</h3>
+                                        <p>Ménilmontant</p> 
+                                    </div>
+                                    <div class="card-rate">
+                                        <button><i class="fa-regular fa-heart"></i></button>
+                                        <button><i class="fa-solid fa-heart"></i></button>
+                                    </div>
                                 </div>
-                            </div>
-                        </article>
-                    </a>
+                            </article>
+                        </a>
+                    </div>
             </section>
         </main>
         <footer>
             <div class="info">
-                <img class="info-logo" src="assets/images/logo/ohmyfood@2x.svg" alt="Logo Ohmyfood">
+                <h1>ohmyfood</h1>
                 <ul class="info-liens">
                     <li><a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a></li>
                     <li><a href="#"><i class="fa-solid fa-handshake-angle"></i>Devenir Partenaire</a></li>
