--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <div class="restaurant-list">
                         <a href="restaurants/menu_palette_du_gout.html">                
                             <article class="restaurant-card">
-                                <div class="card-img">
+                                <div class="card-img lapalettedugout">
                                     <button class="button-new">Nouveau</button>
                                 </div>
                                 <div class="card-content">
@@ -68,6 +68,61 @@
                                     </div>
                             </article>
                         </a>
+                        <a href="restaurants/menu_palette_du_gout.html">                
+                            <article class="restaurant-card">
+                                <div class="card-img lanoteenchantee">
+                                    <button class="button-new">Nouveau</button>
+                                </div>
+                                <div class="card-content">
+                                            <div class="card-txt">
+                                                <h3>La palette du goût</h3>
+                                                <p>Ménilmontant</p> 
+                                            </div>
+                                        <div class="card-rate">
+                                            <input type="checkbox" value="loved" name="loved">
+                                            <label for="loved"><i class="fa-regular fa-heart"></i></label>
+                                            <button><i class="fa-solid fa-heart"></i></button>
+                                        </div>
+                                    </div>
+                            </article>
+                        </a>
+                        <a href="restaurants/menu_palette_du_gout.html">                
+                            <article class="restaurant-card">
+                                <div class="card-img alafrancaise">
+                                    <button class="button-new">Nouveau</button>
+                                </div>
+                                <div class="card-content">
+                                            <div class="card-txt">
+                                                <h3>La palette du goût</h3>
+                                                <p>Ménilmontant</p> 
+                                            </div>
+                                        <div class="card-rate">
+                                            <input type="checkbox" value="loved" name="loved">
+                                            <label for="loved"><i class="fa-regular fa-heart"></i></label>
+                                            <button><i class="fa-solid fa-heart"></i></button>
+                                        </div>
+                                    </div>
+                            </article>
+                        </a>
+                        <a href="restaurants/menu_palette_du_gout.html">                
+                            <article class="restaurant-card">
+                                <div class="card-img ledelicedessens">
+                                    <button class="button-new">Nouveau</button>
+                                </div>
+                                <div class="card-content">
+                                            <div class="card-txt">
+                                                <h3>La palette du goût</h3>
+                                                <p>Ménilmontant</p> 
+                                            </div>
+                                        <div class="card-rate">
+                                            <input type="checkbox" value="loved" name="loved">
+                                            <label for="loved"><i class="fa-regular fa-heart"></i></label>
+                                            <button><i class="fa-solid fa-heart"></i></button>
+                                        </div>
+                                    </div>
+                            </article>
+                        </a>
+
                     </div>
             </section>
         </main>
