--- a/restaurants/menu_delice_des_sens.html
+++ b/restaurants/menu_delice_des_sens.html
@@ -30,18 +30,18 @@
                     <h2>Entrées</h2>
                     <div class="style-bar"></div>
                     <div class="card-choice">
-                        <div class="choice-text">
-                            <h3>Tartare de thon</h3>
-                            <p>Assaisonné au Yuzu</p>
+                        <div class="card-choice-extend">
+                            <div class="choice-text">
+                                <h3>Tartare de thon</h3>
+                                <p>Assaisonné au Yuzu</p>
+                            </div>
+                            <div class="choice-price">25 €</div>
+                            <div class="selected"><i class="fa-solid fa-check"></i>
+                            </div>
                         </div>
-                        <div class="choice-price">25 €</div>
-                        <div class="selected"><i class="fa-solid fa-check"></i></div>
                     </div>
-
                 </div>
             </div>
-
-
         </main>
         <footer>
             <div class="info">
