--- a/index.html
+++ b/index.html
@@ -60,11 +60,10 @@
                                                 <h3>La palette du goût</h3>
                                                 <p>Ménilmontant</p> 
                                             </div>
-                                        <div class="card-rate">
-                                            <input type="checkbox" value="loved" name="loved">
-                                            <label for="loved"><i class="fa-regular fa-heart"></i></label>
-                                            <button><i class="fa-solid fa-heart"></i></button>
-                                        </div>
+                                            <div class="card-rate">
+                                                <button><i class="fa-regular fa-heart"></i></button>
+                                                <button><i class="fa-solid fa-heart"></i></button>
+                                            </div>
                                     </div>
                             </article>
                         </a>
@@ -78,11 +77,10 @@
                                                 <h3>La palette du goût</h3>
                                                 <p>Ménilmontant</p> 
                                             </div>
-                                        <div class="card-rate">
-                                            <input type="checkbox" value="loved" name="loved">
-                                            <label for="loved"><i class="fa-regular fa-heart"></i></label>
-                                            <button><i class="fa-solid fa-heart"></i></button>
-                                        </div>
+                                            <div class="card-rate">
+                                                <button><i class="fa-regular fa-heart"></i></button>
+                                                <button><i class="fa-solid fa-heart"></i></button>
+                                            </div>
                                     </div>
                             </article>
                         </a>
@@ -96,11 +94,10 @@
                                                 <h3>La palette du goût</h3>
                                                 <p>Ménilmontant</p> 
                                             </div>
-                                        <div class="card-rate">
-                                            <input type="checkbox" value="loved" name="loved">
-                                            <label for="loved"><i class="fa-regular fa-heart"></i></label>
-                                            <button><i class="fa-solid fa-heart"></i></button>
-                                        </div>
+                                            <div class="card-rate">
+                                                <button><i class="fa-regular fa-heart"></i></button>
+                                                <button><i class="fa-solid fa-heart"></i></button>
+                                            </div>
                                     </div>
                             </article>
                         </a>
@@ -114,11 +111,10 @@
                                                 <h3>La palette du goût</h3>
                                                 <p>Ménilmontant</p> 
                                             </div>
-                                        <div class="card-rate">
-                                            <input type="checkbox" value="loved" name="loved">
-                                            <label for="loved"><i class="fa-regular fa-heart"></i></label>
-                                            <button><i class="fa-solid fa-heart"></i></button>
-                                        </div>
+                                            <div class="card-rate">
+                                                <button><i class="fa-regular fa-heart"></i></button>
+                                                <button><i class="fa-solid fa-heart"></i></button>
+                                            </div>
                                     </div>
                             </article>
                         </a>
