--- a/restaurants/menu_delice_des_sens.html
+++ b/restaurants/menu_delice_des_sens.html
@@ -21,8 +21,7 @@
                 <div class="restaurant-info">
                     <h1>Le délice des sens</h1>
                     <div class="card-rate">
-                        <input type="checkbox" value="loved" name="loved">
-                        <label for="loved"><i class="fa-regular fa-heart"></i></label>
+                        <button><i class="fa-regular fa-heart"></i></button>
                         <button><i class="fa-solid fa-heart"></i></button>
                     </div>
                 </div>
