--- a/restaurants/menu_delice_des_sens.html
+++ b/restaurants/menu_delice_des_sens.html
@@ -15,7 +15,8 @@
             <img class="header-logo" src="../assets/images/logo/ohmyfood@2x.svg" alt="Logo Ohmyfood">
         </header>
         <main class="restaurant">
-            <div class="ledelicedessens">
+            <div class="ledelicedessens2">
+                <img src="../assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Photo d'une assiette au Délice des sens">
             </div>
             <div class="main-course">
                 <div class="restaurant-info">
