--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
                     <div class="restaurant-list">
                         <a href="restaurants/menu_palette_du_gout.html">                
                             <article class="restaurant-card">
-                                <div class="card-img lapalettedugout">
+                                <div class="photo">
+                                    <img src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Une table à La palette du goût" title="Une table à La palette du goût">
                                     <button class="button-new">Nouveau</button>
                                 </div>
                                 <div class="card-content">
@@ -69,13 +70,14 @@
                         </a>
                         <a href="restaurants/menu_note_enchantee.html">                
                             <article class="restaurant-card">
-                                <div class="card-img lanoteenchantee">
+                                <div class="photo">
+                                    <img src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Une table à La note enchantée" title="Une table à La note enchantée">
                                     <button class="button-new">Nouveau</button>
                                 </div>
                                 <div class="card-content">
                                             <div class="card-txt">
-                                                <h3>La palette du goût</h3>
-                                                <p>Ménilmontant</p> 
+                                                <h3>La note enchantée</h3>
+                                                <p>Charonne</p> 
                                             </div>
                                             <div class="card-rate">
                                                 <button><i class="fa-regular fa-heart"></i></button>
@@ -86,13 +88,13 @@
                         </a>
                         <a href="restaurants/menu_la_francaise.html">                
                             <article class="restaurant-card">
-                                <div class="card-img alafrancaise">
-                                    <button class="button-new">Nouveau</button>
+                                <div class="photo">
+                                    <img src="assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Une table à la Française" title="Une table à la Française">
                                 </div>
                                 <div class="card-content">
                                             <div class="card-txt">
-                                                <h3>La palette du goût</h3>
-                                                <p>Ménilmontant</p> 
+                                                <h3>A la Française</h3>
+                                                <p>Cité Rouge</p> 
                                             </div>
                                             <div class="card-rate">
                                                 <button><i class="fa-regular fa-heart"></i></button>
@@ -103,13 +105,13 @@
                         </a>
                         <a href="restaurants/menu_delice_des_sens.html">                
                             <article class="restaurant-card">
-                                <div class="card-img ledelicedessens">
-                                    <button class="button-new">Nouveau</button>
+                                <div class="photo">
+                                    <img src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Une table au délice des sens" title="Une table au délice des sens">
                                 </div>
                                 <div class="card-content">
                                             <div class="card-txt">
-                                                <h3>La palette du goût</h3>
-                                                <p>Ménilmontant</p> 
+                                                <h3>Le délice des sens</h3>
+                                                <p>Folie-Méricourt</p> 
                                             </div>
                                             <div class="card-rate">
                                                 <button><i class="fa-regular fa-heart"></i></button>
