--- a/index.html
+++ b/index.html
@@ -62,10 +62,9 @@
                                                 <p>Ménilmontant</p> 
                                             </div>
                                             <div class="card-rate">
-                                                <button><i class="fa-regular fa-heart"></i></button>
-                                                <button><i class="fa-solid fa-heart"></i></button>
-                                            </div>
-                                    </div>
+                                                <button class="heart empty"><i class="fa-regular fa-heart"></i></button>
+                                                <button class="heart"><i class="fa-solid fa-heart"></i></button>
+                                            </div>                                                            </div>
                             </article>
                         </a>
                         <a href="restaurants/menu_note_enchantee.html">                
@@ -80,10 +79,9 @@
                                                 <p>Charonne</p> 
                                             </div>
                                             <div class="card-rate">
-                                                <button><i class="fa-regular fa-heart"></i></button>
-                                                <button><i class="fa-solid fa-heart"></i></button>
-                                            </div>
-                                    </div>
+                                                <button class="heart empty"><i class="fa-regular fa-heart"></i></button>
+                                                <button class="heart"><i class="fa-solid fa-heart"></i></button>
+                                            </div>                                                            </div>
                             </article>
                         </a>
                         <a href="restaurants/menu_la_francaise.html">                
@@ -97,10 +95,9 @@
                                                 <p>Cité Rouge</p> 
                                             </div>
                                             <div class="card-rate">
-                                                <button><i class="fa-regular fa-heart"></i></button>
-                                                <button><i class="fa-solid fa-heart"></i></button>
-                                            </div>
-                                    </div>
+                                                <button class="heart empty"><i class="fa-regular fa-heart"></i></button>
+                                                <button class="heart"><i class="fa-solid fa-heart"></i></button>
+                                            </div>                                                            </div>
                             </article>
                         </a>
                         <a href="restaurants/menu_delice_des_sens.html">                
@@ -114,10 +111,9 @@
                                                 <p>Folie-Méricourt</p> 
                                             </div>
                                             <div class="card-rate">
-                                                <button><i class="fa-regular fa-heart"></i></button>
-                                                <button><i class="fa-solid fa-heart"></i></button>
-                                            </div>
-                                    </div>
+                                                <button class="heart empty"><i class="fa-regular fa-heart"></i></button>
+                                                <button class="heart"><i class="fa-solid fa-heart"></i></button>
+                                            </div>                                                           </div>
                             </article>
                         </a>
 
