--- a/restaurants/menu_delice_des_sens.html
+++ b/restaurants/menu_delice_des_sens.html
@@ -22,8 +22,8 @@
                 <div class="restaurant-info">
                     <h1>Le délice des sens</h1>
                     <div class="card-rate">
-                        <button><i class="fa-regular fa-heart"></i></button>
-                        <button><i class="fa-solid fa-heart"></i></button>
+                        <button class="heart empty"><i class="fa-regular fa-heart"></i></button>
+                        <button class="heart"><i class="fa-solid fa-heart"></i></button>
                     </div>
                 </div>
                 <div class="restaurant-menu">
