--- a/restaurants/menu_delice_des_sens.html
+++ b/restaurants/menu_delice_des_sens.html
@@ -26,20 +26,118 @@
                         <button class="heart"><i class="fa-solid fa-heart"></i></button>
                     </div>
                 </div>
-                <div class="restaurant-menu">
-                    <h2>Entrées</h2>
-                    <div class="style-bar"></div>
-                    <div class="card-choice">
-                        <div class="card-choice-extend">
-                            <div class="choice-text">
-                                <h3>Tartare de thon</h3>
-                                <p>Assaisonné au Yuzu</p>
+                <div class="menu-container">
+                    <div class="restaurant-menu">
+                        <h2>Entrées</h2>
+                        <div class="style-bar"></div>
+                        <div class="card-choice">
+                            <div class="card-choice-extend">
+                                <div class="choice-text">
+                                    <h3>Tartare de thon</h3>
+                                    <p>Assaisonné au Yuzu</p>
+                                </div>
+                                <div class="choice-price">25€</div>
+                                <div class="selected"><i class="fa-solid fa-check"></i>
+                                </div>
                             </div>
-                            <div class="choice-price">25 €</div>
-                            <div class="selected"><i class="fa-solid fa-check"></i>
+                        </div>
+                        <div class="card-choice">
+                            <div class="card-choice-extend">
+                                <div class="choice-text">
+                                    <h3>Bouchée de homard croustillant </h3>
+                                    <p>Et sa farandole de petits légumes</p>
+                                </div>
+                                <div class="choice-price">35€</div>
+                                <div class="selected"><i class="fa-solid fa-check"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card-choice">
+                            <div class="card-choice-extend">
+                                <div class="choice-text">
+                                    <h3>Velouté de cèpes</h3>
+                                    <p>Aux truffes</p>
+                                </div>
+                                <div class="choice-price">20€</div>
+                                <div class="selected"><i class="fa-solid fa-check"></i></div>
                             </div>
                         </div>
                     </div>
+                    <div class="restaurant-menu">
+                        <h2>Plats</h2>
+                        <div class="style-bar"></div>
+                        <div class="card-choice">
+                            <div class="card-choice-extend">
+                                <div class="choice-text">
+                                    <h3>Poulet rôti aux herbes de Provence </h3>
+                                    <p>Et sa crème de truffe</p>
+                                </div>
+                                <div class="choice-price">40€</div>
+                                <div class="selected"><i class="fa-solid fa-check"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card-choice">
+                            <div class="card-choice-extend">
+                                <div class="choice-text">
+                                    <h3>Langouste rôtie</h3>
+                                    <p>Et ses légumes de saison</p>
+                                </div>
+                                <div class="choice-price">35€</div>
+                                <div class="selected"><i class="fa-solid fa-check"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card-choice">
+                            <div class="card-choice-extend">
+                                <div class="choice-text">
+                                    <h3>Côte de bœuf Angus </h3>
+                                    <p>Et sa purée de panais</p>
+                                </div>
+                                <div class="choice-price">44€</div>
+                                <div class="selected"><i class="fa-solid fa-check"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="restaurant-menu">
+                        <h2>Desserts</h2>
+                        <div class="style-bar"></div>
+                        <div class="card-choice">
+                            <div class="card-choice-extend">
+                                <div class="choice-text">
+                                    <h3>Farandole de desserts</h3>
+                                    <p>Du chef</p>
+                                </div>
+                                <div class="choice-price">18€</div>
+                                <div class="selected"><i class="fa-solid fa-check"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card-choice">
+                            <div class="card-choice-extend">
+                                <div class="choice-text">
+                                    <h3>Crème brulée</h3>
+                                    <p>Revisitée</p>
+                                </div>
+                                <div class="choice-price">22€</div>
+                                <div class="selected"><i class="fa-solid fa-check"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card-choice">
+                            <div class="card-choice-extend">
+                                <div class="choice-text">
+                                    <h3>Tiramisu</h3>
+                                    <p>À la noisette</p>
+                                </div>
+                                <div class="choice-price">23€</div>
+                                <div class="selected"><i class="fa-solid fa-check"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <a href="#"><button class="button-fantasy">Commander</button></a>
                 </div>
             </div>
         </main>
