--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="sass/index.css">
         <script src="https://kit.fontawesome.com/3f75339eca.js" crossorigin="anonymous"></script>
     </head>
+    
     <body>
         <header>
             <img class="header-logo" src="assets/images/logo/ohmyfood@2x.svg" alt="Logo Ohmyfood">
@@ -57,14 +58,14 @@
                                     <button class="button-new">Nouveau</button>
                                 </div>
                                 <div class="card-content">
-                                            <div class="card-txt">
-                                                <h3>La palette du goût</h3>
-                                                <p>Ménilmontant</p> 
-                                            </div>
-                                            <div class="card-rate">
-                                                <button class="heart empty"><i class="fa-regular fa-heart"></i></button>
-                                                <button class="heart"><i class="fa-solid fa-heart"></i></button>
-                                            </div>                                                            </div>
+                                    <div class="card-txt">
+                                        <h3>La palette du goût</h3>
+                                        <p>Ménilmontant</p> 
+                                    </div>
+                                    <div class="card-rate">
+                                        <button><i class="fa-regular fa-heart"></i><i class="fa-solid fa-heart"></i></button>
+                                    </div>
+                                </div>
                             </article>
                         </a>
                         <a href="restaurants/menu_note_enchantee.html">                
@@ -74,14 +75,14 @@
                                     <button class="button-new">Nouveau</button>
                                 </div>
                                 <div class="card-content">
-                                            <div class="card-txt">
-                                                <h3>La note enchantée</h3>
-                                                <p>Charonne</p> 
-                                            </div>
-                                            <div class="card-rate">
-                                                <button class="heart empty"><i class="fa-regular fa-heart"></i></button>
-                                                <button class="heart"><i class="fa-solid fa-heart"></i></button>
-                                            </div>                                                            </div>
+                                    <div class="card-txt">
+                                        <h3>La note enchantée</h3>
+                                        <p>Charonne</p> 
+                                    </div>
+                                    <div class="card-rate">
+                                        <button><i class="fa-regular fa-heart"></i><i class="fa-solid fa-heart"></i></button>
+                                    </div>
+                                </div>
                             </article>
                         </a>
                         <a href="restaurants/menu_la_francaise.html">                
@@ -90,14 +91,14 @@
                                     <img src="assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Une table à la Française" title="Une table à la Française">
                                 </div>
                                 <div class="card-content">
-                                            <div class="card-txt">
-                                                <h3>A la Française</h3>
-                                                <p>Cité Rouge</p> 
-                                            </div>
-                                            <div class="card-rate">
-                                                <button class="heart empty"><i class="fa-regular fa-heart"></i></button>
-                                                <button class="heart"><i class="fa-solid fa-heart"></i></button>
-                                            </div>                                                            </div>
+                                    <div class="card-txt">
+                                        <h3>A la Française</h3>
+                                        <p>Cité Rouge</p> 
+                                    </div>
+                                    <div class="card-rate">
+                                        <button><i class="fa-regular fa-heart"></i><i class="fa-solid fa-heart"></i></button>
+                                    </div>
+                                </div>
                             </article>
                         </a>
                         <a href="restaurants/menu_delice_des_sens.html">                
@@ -106,14 +107,14 @@
                                     <img src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Une table au délice des sens" title="Une table au délice des sens">
                                 </div>
                                 <div class="card-content">
-                                            <div class="card-txt">
-                                                <h3>Le délice des sens</h3>
-                                                <p>Folie-Méricourt</p> 
-                                            </div>
-                                            <div class="card-rate">
-                                                <button class="heart empty"><i class="fa-regular fa-heart"></i></button>
-                                                <button class="heart"><i class="fa-solid fa-heart"></i></button>
-                                            </div>                                                           </div>
+                                    <div class="card-txt">
+                                        <h3>Le délice des sens</h3>
+                                        <p>Folie-Méricourt</p> 
+                                    </div>
+                                    <div class="card-rate">
+                                        <button><i class="fa-regular fa-heart"></i><i class="fa-solid fa-heart"></i></button>
+                                    </div>
+                                </div>
                             </article>
                         </a>
 
