--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </div>
         </header>
         <main class="main-container">
-            <section class="intro section-bgd">
+            <section class="section-bgd">
                 <h1>Réservez le menu qui vous convient</h1>
                 <p>Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
                 <a href="#restaurants"><button class="button-fantasy">Explorer nos restaurants</button></a>
@@ -124,7 +124,7 @@
         <footer>
             <div class="info">
                 <h1>ohmyfood</h1>
-                <ul class="info-liens">
+                <ul>
                     <li><a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a></li>
                     <li><a href="#"><i class="fa-solid fa-handshake-angle"></i>Devenir Partenaire</a></li>
                     <li><a href="#">Mentions légales</a></li>
