--- a/restaurants/menu_delice_des_sens.html
+++ b/restaurants/menu_delice_des_sens.html
@@ -143,12 +143,12 @@
         <footer>
             <div class="info">
                 <h1>ohmyfood</h1>
-                <ul class="info-liens">
-                    <li><a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a></li>
-                    <li><a href="#"><i class="fa-solid fa-handshake-angle"></i>Devenir Partenaire</a></li>
-                    <li><a href="#">Mentions légales</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
+                <div class="info--contact">
+                    <a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a>
+                    <a href="#"><i class="fa-solid fa-handshake-angle"></i>Devenir Partenaire</a>
+                    <a href="#">Mentions légales</a>
+                    <a href="#">Contact</a>
+                </div>
             </div>
         </footer>
     </body>
