--- a/restaurants/menu_palette_du_gout.html
+++ b/restaurants/menu_palette_du_gout.html
@@ -17,16 +17,16 @@
         <Main>
 
         </Main>
-        <Footer>
-            <h1>ohmyfood</h1>
-            <menu>
-                <ul>
-                    <li><i class="fa-solid fa-utensils"></i>Proposer un restaurant</li>
-                    <li><i class="fa-solid fa-handshake-angle"></i>Devenir Partenaire</li>
-                    <li>Mentions légales</li>
-                    <li>Contact</li>
-                </ul>
-            </menu>
-        </Footer>
+        <footer>
+            <div class="info">
+                <h1>ohmyfood</h1>
+                <div class="info--contact">
+                    <a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a>
+                    <a href="#"><i class="fa-solid fa-handshake-angle"></i>Devenir Partenaire</a>
+                    <a href="#">Mentions légales</a>
+                    <a href="#">Contact</a>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
