--- a/index.html
+++ b/index.html
@@ -24,27 +24,29 @@
                 <p>Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
                 <a href="#restaurants"><button class="button-fantasy">Explorer nos restaurants</button></a>
             </section>
-            <section class="howto">
+            <section>
                 <h1>Fonctionnement</h1>
-                <div class="use-card">
-                    <p class="number-box">1</p>
-                    <div>
-                        <p><i class="fa-solid fa-mobile-screen-button"></i></p>
-                        <h4>Choisissez un restaurant</h4>
+                <div class="howto">
+                    <div class="use-card">
+                        <p class="number-box">1</p>
+                        <div>
+                            <p><i class="fa-solid fa-mobile-screen-button"></i></p>
+                            <h4>Choisissez un restaurant</h4>
+                        </div>
                     </div>
-                </div>
-                <div class="use-card">
-                    <p class="number-box">2</p>
-                    <div>
-                        <p><i class="fa-solid fa-list-ul"></i></p>
-                        <h4>Composez votre menu</h4>
+                    <div class="use-card">
+                        <p class="number-box">2</p>
+                        <div>
+                            <p><i class="fa-solid fa-list-ul"></i></p>
+                            <h4>Composez votre menu</h4>
+                        </div>
                     </div>
-                </div>
-                <div class="use-card">
-                    <p class="number-box">3</p>
-                    <div>
-                        <p><i class="fa-solid fa-store"></i></p>
-                        <h4>Dégustez au restaurant</h4>
+                    <div class="use-card">
+                        <p class="number-box">3</p>
+                        <div>
+                            <p><i class="fa-solid fa-store"></i></p>
+                            <h4>Dégustez au restaurant</h4>
+                        </div>
                     </div>
                 </div>
             </section>
